feat: lookup image pull secrets
Signed-off-by: mmerril8 <mmerril8@its.jnj.com>

--- a/config.default.json
+++ b/config.default.json
@@ -23,5 +23,6 @@
   "DEFAULT_KUBERNETES_UPSTREAM_URL": "https://api.snyk.io/v2/kubernetes-upstream",
   "MAX_RETRY_BACKOFF_DURATION_SECONDS": 300,
   "USE_KEEPALIVE": true,
-  "SYSDIG_POLLING_INTERVAL_MINS": 30
+  "SYSDIG_POLLING_INTERVAL_MINS": 30,
+  "REUSE_IMAGE_PULLSECRETS": false
 }
