--- a/snyk-monitor/templates/deployment.yaml
+++ b/snyk-monitor/templates/deployment.yaml
@@ -189,6 +189,8 @@ spec:
             value: {{ quote .Values.workers.count }}
           - name: SNYK_SYSDIG_POLLING_INTERVAL_MINS
             value: {{ quote .Values.sysdig.pollingIntervalMins }}
+          - name: REUSE_IMAGE_PULLSECRETS
+            value: {{ quote .Values.reuse_image_pullsecrets }}
           {{- if .Values.sysdig.enabled }}
           - name: SNYK_SYSDIG_RISK_SPOTLIGHT_TOKEN
             valueFrom:
